Fix minor bugs.

--- a/OilChartHybrid/src/pages/home/home.html
+++ b/OilChartHybrid/src/pages/home/home.html
@@ -4,9 +4,7 @@
         <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      <span class="btn btn-link" (click)="onGoHomePage()">
-        <b>HART</b>ENGERGY
-      </span>
+      <img class="logo" src="assets/img/logo_white.png" (click)="onGoHomePage()"/>
     </ion-title>
     <ion-buttons end>
       <button ion-button (click)="onInformation()">
