--- a/OilChartHybrid/src/index.html
+++ b/OilChartHybrid/src/index.html
@@ -27,8 +27,8 @@
   <script src="assets/amcharts/amcharts.js" type="text/javascript"></script>
   <script src="assets/amcharts/serial.js" type="text/javascript"></script>
   <script src="assets/amcharts/themes/light.js" type="text/javascript"></script>
-  <script src="assets/amcharts/plugins/export/export.min.js" type="text/javascript" ></script>
-  <link href="assets/amcharts/plugins/export/export.css" type="text/css" media="all" rel="stylesheet" />
+  <!--<script src="assets/amcharts/plugins/export/export.min.js" type="text/javascript" ></script>
+  <link href="assets/amcharts/plugins/export/export.css" type="text/css" media="all" rel="stylesheet" />-->
 
 </head>
 <body>
