Add inappbrowser to show website.

--- a/OilChartHybrid/src/pages/home/home.html
+++ b/OilChartHybrid/src/pages/home/home.html
@@ -4,7 +4,7 @@
         <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      <img class="logo" src="assets/img/logo_white.png" (click)="onGoHomePage()"/>
+      <img class="logo" src="assets/img/logo_white.png" (click)="onGoHomePage()" tappable/>
     </ion-title>
     <ion-buttons end>
       <button ion-button (click)="onInformation()">
