--- a/OilChartHybrid/src/pages/options-menu/options-menu.html
+++ b/OilChartHybrid/src/pages/options-menu/options-menu.html
@@ -1,4 +1,4 @@
-<div class="main" (click)="onClickMain()" [@visibilityChanged]="visibility" (@visibilityChanged.done)="onEndAnimation($event)">
+<div class="main" (click)="onClickMain()" [@visibilityChanged]="visibility" (@visibilityChanged.done)="onEndAnimation($event)" tappable>
   <div id="mainMenuContent">
     <div class="container">
       <div class="title"><b>Oil Market Price:</b></div>
